test/sema/typeck/impl/impl-struct-type-params-err.dora
trait MyTrait { fn bar(); }
struct Foo[T](T)
impl MyTrait for Foo[String] { fn bar() {} }
fn bar(x: Foo[Int32]) { x.bar(); }
